[metadata]
name = db-helper-manager-konradkrasno
version = 0.0.1
author = Konrad Krasnodebski
author_email = konradkrasno@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/konradkrasno/db_helper_manager
project_urls =
    Bug Tracker = https://github.com/konradkrasno/db_helper_manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    certifi ==2020.12.5
    chardet ==4.0.0
    greenlet ==1.1.0
    idna ==2.10
    mysqlclient ==2.0.3
    requests ==2.25.1
    SQLAlchemy ==1.4.14
    urllib3 ==1.26.4
entry_points = file: entry_points.txt

[options.packages.find]
where = src
