[metadata]
name = db-helper-manager-konradkrasno
version = 0.0.1
author = Konrad Krasnodebski
author_email = konradkrasno@gmail.com
url = https://github.com/konradkrasno/db_helper_manager
project_urls =
    Bug Tracker = https://github.com/konradkrasno/db_helper_manager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
entry_points = file: entry_points.txt

[options.packages.find]
where = src
